app is up and running

--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
   <body>
     <section class="calculator-grid">
       <div class="output">
-        <div data-previus class="output__previous">123</div>
-        <div data-current class="output__current">435</div>
+        <div data-previous class="output__previous"></div>
+        <div data-current class="output__current"></div>
       </div>
 
       <button data-all-clear class="span-two">AC</button>
