--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
       rel="stylesheet"
     />
     <!-- Styles -->
-    <link rel="stylesheet" href="./styles/style.css" />
-    <script src="./calculator.js" defer></script>
+    <link rel="stylesheet" href="./assets/styles/style.css" />
+    <script src="./app.js" type="module" defer></script>
     <title>Calculator App</title>
   </head>
   <body>
